020AE01	exsrapiの関数の戻り値の変更に対する対応の誤りを正す。

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,11 @@
         {
             "label": "go build",
             "type": "shell",
+            "options": {
+                "env": {
+                  "CGO_ENABLED": "0"
+                }
+            },
             "command": "go",
             "args": [
                 "build",
